--- a/2.html
+++ b/2.html
@@ -1,21 +1,19 @@
-<!html doctype>
+<!doctype html>
+<html>
 <head>
-<title>WEB1 - CSS</title>
-<meta charset='utf-8'>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-177197340-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-177197340-1');
-</script>
+  <title>WEB1 - CSS</title>
+  <meta charset="utf-8">
 </head>
-
 <body>
-
-<h1>2번째 페이지에서는 CSS에 대해 배웁니다.</h1>
-
-
+  <h1><a href="index.html">WEB</a></h1>
+  <ol>
+    <li><a href="1.html">HTML</a></li>
+    <li><a href="2.html">CSS</a></li>
+    <li><a href="3.html">JavaScript</a></li>
+  </ol>
+  <h2>CSS</h2>
+  <p>
+    Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language. Although most often used to set the visual style of web pages and user interfaces written in HTML and XHTML, the language can be applied to any XML document, including plain XML, SVG and XUL, and is applicable to rendering in speech, or on other media. Along with HTML and JavaScript, CSS is a cornerstone technology used by most websites to create visually engaging webpages, user interfaces for web applications, and user interfaces for many mobile applications.
+  </p>
 </body>
+</html>
