--- a/index.html
+++ b/index.html
@@ -1,50 +1,18 @@
-</body>
 <!doctype html>
 <html>
 <head>
-<title>WEB1 - HTML</title>
-<meta charset='utf-8'>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-177197340-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-177197340-1');
-</script>
+  <title>WEB1 - Welcome</title>
+  <meta charset="utf-8">
 </head>
-
 <body>
-  <h1><a href='index.html'>WEB</a></h1>
+  <h1><a href="index.html">WEB</a></h1>
   <ol>
-    <li><a href='1.html'>1.HTML</a></li>
-    <li><a href='2.html'>2.CSS</a></li>
-    <li><a href='3.html'>3.JavaScript</a></li>
+    <li><a href="1.html">HTML</a></li>
+    <li><a href="2.html">CSS</a></li>
+    <li><a href="3.html">JavaScript</a></li>
   </ol>
-<h2>HTML</h2>
-  <strong>hello</strong> web!!!
-  결국에 내가 하고 싶은거는<u>업무자동화</u>야
-
-  <a href='https://www.sungkyul.ac.kr/mbs/skukr/jsp/board/list.jsp?boardId=29&id=skukr_060102000000'
-  target=’_blank’ title=’성결대학교홈페이지’>
-  Hypertext Markup Language (HTML)</a> is the
-  standard markup language for creating web pages
-  and web applications.Web browsers receive HTML
-  documents from a web server or from local storage
-  and render them into multimedia web pages.
-  HTML describes the structure of a web page semantically
-  and originally included cues for the appearance of
-  the document.
-  <img src='coding.jpg' width='100%'>
-  <p style='margin-top:45px;'>HTML elements are the building blocks of HTML pages.
-  With HTML constructs, images and other objects,
-  such as interactive forms, may be embedded
-  into the rendered page.
-  It provides a means to create structured documents
-  by denoting structural semantics for text such as
-  headings, paragraphs, lists, links, quotes and other
-  items. HTML elements are delineated by tags,
-  written using angle brackets.</p>
+  <h2>WEB</h2>
+  <p>The World Wide Web (abbreviated WWW or the Web) is an information space where documents and other web resources are identified by Uniform Resource Locators (URLs), interlinked by hypertext links, and can be accessed via the Internet.[1] English scientist Tim Berners-Lee invented the World Wide Web in 1989. He wrote the first web browser computer program in 1990 while employed at CERN in Switzerland.[2][3] The Web browser was released outside of CERN in 1991, first to other research institutions starting in January 1991 and to the general public on the Internet in August 1991.
+  </p>
 </body>
 </html>
